<resources>
    <string name="app_name">Cuidados Mayores</string>

    <string name="facebook_app_id">572767276391517</string>
    <string name="fb_login_protocol_scheme">fb572767276391517</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_registrarse">Registrarse</string>
    <string name="action_iniciar_sesion">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--Tutoriales-->
    <string name="tutorial_skip">Esta seguro que desea saltear el tutorial?. Recuerde que puede volver a verlo desde Configuracion -> Tutoriales</string>
    <string name="title_activity_maps">Ubicacion</string>
    <string name="tutorial_login_title1">Cuide de sus familiares queridos</string>
    <string name="tutorial_login_desc1">Esté al tanto de como duerme, ejercita y se entretiene su familiar mayor de edad.</string>
    <string name="tutorial_login_title2">Conozca su ubicacion en tiempo real</string>
    <string name="tutorial_login_desc2">Acceso en cualquier momento a la ubicacion de su familiar.
        Consulta de trayectorias recorridas en el dia.</string>
    <string name="tutorial_login_title3">Atencion en caso de emergencia</string>
    <string name="tutorial_login_desc3">En caso de deteccion de una emergencia reciba una notificacion el instante mientras que la asistencia va en camino..</string>

    <string name="tutorial_maps_title1">Consulte la ubicacion en tiempo real</string>
    <string name="tutorial_maps_desc1">En cualquier momento puede ver donde se encuentra su familiar. Asegurese que se encuentre bien en cada momento.</string>
    <string name="tutorial_maps_title2">Consulte la trayectoria que recorrio</string>
    <string name="tutorial_maps_desc2">Lleve un registro de las cuadras recorridas en las ultimas 2, 12 y 24 horas.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
